--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<!-- Test -->
 	<properties>
+		<lombok-version>1.18.24</lombok-version>
 		<junit-jupiter-version>5.4.2</junit-jupiter-version>
 		<mockito-version>4.5.1</mockito-version>
 		<junit-platform-launcher-version>1.4.2</junit-platform-launcher-version>
@@ -16,6 +17,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok-version}</version>
+		</dependency>	
 		<!-- Test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
